[gd_scene format=3 uid="uid://bv4l30ij2r3h5"]

[ext_resource type="Texture2D" uid="uid://bc61knsnpn80q" path="res://assets/misc/shader_shapes/10x10_Circle.png" id="1_dic0k"]
[ext_resource type="Script" uid="uid://dq5yrdwkbjcx4" path="res://weapons/bullets/laser.gd" id="1_f8jtw"]
[ext_resource type="Texture2D" uid="uid://dg3prdxm3fsj6" path="res://assets/effects/lightning.png" id="2_f8jtw"]
[ext_resource type="AudioStream" uid="uid://qforgqbx0d01" path="res://assets/sfx/gun_shots/Lightning_nuc_01.ogg" id="4_g1wxj"]

[sub_resource type="Curve" id="Curve_g1wxj"]
_limits = [0.0, 2.0, 0.0, 1.0]
_data = [Vector2(0, 2), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_xbc4n"]
curve = SubResource("Curve_g1wxj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xbc4n"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_xbc4n")

[sub_resource type="Curve" id="Curve_ymfot"]
_limits = [0.0, 2.0, 0.0, 2.0]
_data = [Vector2(0.03205128, 2), 0.0, 0.0, 0, 0, Vector2(1, 0.51354843), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_8npyp"]
curve = SubResource("Curve_ymfot")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o34ku"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 12.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_8npyp")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_st5t1"]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rolki"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(100, 20, 1)
gravity = Vector3(0, 98, 0)
anim_speed_min = 3.98
anim_speed_max = 4.89

[node name="laser" type="RayCast2D" unique_id=858711956]
collision_mask = 14
script = ExtResource("1_f8jtw")

[node name="ln_laser_fallout" type="Line2D" parent="." unique_id=1597264364]
points = PackedVector2Array(0, 0, 500, 0)
default_color = Color(0.42655835, 0.85, 0.3315, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="ln_laser_main" type="Line2D" parent="." unique_id=657906709]
points = PackedVector2Array(0, 0, 500, 0)
width = 3.0

[node name="CastingParticles2D" type="GPUParticles2D" parent="." unique_id=819679144]
z_index = 100
emitting = false
amount = 1
texture = ExtResource("1_dic0k")
lifetime = 0.2
one_shot = true
process_material = SubResource("ParticleProcessMaterial_xbc4n")

[node name="CollisionParticles2D" type="GPUParticles2D" parent="." unique_id=469180017]
position = Vector2(25, -18)
emitting = false
amount = 20
texture = ExtResource("1_dic0k")
lifetime = 0.2
one_shot = true
explosiveness = 0.84
process_material = SubResource("ParticleProcessMaterial_o34ku")

[node name="BeamParticles2D" type="GPUParticles2D" parent="." unique_id=897014779]
visible = false
modulate = Color(0.48175997, 0.96, 0.3744, 0.8980392)
material = SubResource("CanvasItemMaterial_st5t1")
position = Vector2(112, 6)
amount = 50
texture = ExtResource("2_f8jtw")
explosiveness = 1.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_rolki")

[node name="tmr_rate" type="Timer" parent="." unique_id=389580847]
one_shot = true

[node name="asp_fire" type="AudioStreamPlayer" parent="." unique_id=1984853119]
stream = ExtResource("4_g1wxj")
volume_db = -13.065

[node name="tmr_life" type="Timer" parent="." unique_id=1974246541]
one_shot = true

[node name="tmr_queue_free" type="Timer" parent="." unique_id=1320223384]
one_shot = true

[connection signal="timeout" from="tmr_life" to="." method="_on_tmr_life_timeout"]
[connection signal="timeout" from="tmr_queue_free" to="." method="_on_tmr_queue_free_timeout"]
